Added link to github on mainpage

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>UNDER CONSTRUCTION</h1>
+    <p>In the meantime visit my Github page:</p>
+    <p><a href="https://github.com/daviddhnguyen">David's Github</a></a></p>
 </body>
 </html>
