Adds style and centers text on page

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Website of David DH Nguyen</title>
-    <link src="style.css">
+    <link type=""text/css" rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>UNDER CONSTRUCTION</h1>
-    <p>In the meantime visit my Github page:</p>
-    <p><a href="https://github.com/daviddhnguyen">David's Github</a></a></p>
+    <div class="header">
+        <h1>UNDER CONSTRUCTION</h1>
+        <p>In the meantime visit my Github page for other projects: 
+            <a href="https://github.com/daviddhnguyen">David's Github</a>
+        </p>
+    </div>
 </body>
 </html>
