--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Website of David DH Nguyen</title>
+    <title>David DH Nguyen's Portfolio</title>
     <link type=""text/css" rel="stylesheet" href="./style.css">
 </head>
 <body>
