added marked.min.js from cdn

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </section>
     </main>
 
-    <!-- Markdown parser -->
-    <script src="marked.min.js"></script>
+    <!-- Markdown parser from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
         const posts = [
             'posts/post1.md',
