corrected posts path

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
         const posts = [
-            'posts/post1.md',
-            'posts/post2.md'
+            './posts/post1.md',
+            './posts/post2.md'
         ];
 
         const blogContainer = document.getElementById('blog-container');
